[project]
name = "wagtail-honeypot"
version = "1.1.0"
description = "Use this package to add optional honeypot protection to your Wagtail forms."
authors = [
    {name = "Nick Moreton", email = "nickmoreton@me.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]
requires-python = ">=3.8"
dependencies =[
    "Wagtail>=4.1",
]

[project.optional-dependencies]
development = [
    "black==23.1.0",
    "tox==4.4.4",
    "coverage==7.1.0",
    "flake8==6.0.0",
    "isort==5.0.0",
    "pre-commit==3.0.0",
]
